@@ -1,5 +1,5 @@
 version 1.8.3, in progress
-- Fix bugs 2819633, 2827358
+- Fix bugs 2819633, 2827358, 2828349
 - $stopwatch: use times() function if available, to include
   execution time of child processes
 - Add function "mreverse" to reverse rows or columns of
@@ -24,6 +24,7 @@ version 1.8.3, in progress
   to daily
 - Add "set" variable "csv_na" to control the representation
   of NA values in CSV output (also GUI selector for same)
+- Remove temporary "set" variable "protect_lists"
 
 7/8/2009 version 1.8.2
 - Fixes for GARCH "corner cases"
